# manifest-prototype

./: .mcp.json  AGENTS.md  README.md  pyproject.toml
descriptions/: ais_description.ttl  beaver_description.ttl  polymarket_description.ttl
docs/: shacl-shapes.md  vocabulary-evolution.md
manifest/: cli.py  graph.py  server.py
sdl/: __init__.py  cli.py  engine.py  graph.py  model.py  registry.py
sdl/validators/: __init__.py  aggregation.py  ordering.py  schema.py  values.py
tests/: test_server.py
vocabularies/: mnf_core.ttl  mnf_shapes.ttl  sdl_core.ttl
